add simple todo

--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "@vimeo/player": "^2.18.0",
+    "basiclightbox": "^5.0.4",
     "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
-    "simplelightbox": "^2.12.1"
+    "simplelightbox": "^2.12.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
